# imcqd

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  main.hpp  notes.txt  requirements.txt
dist_exp/: dense_0.csv  dense_10.csv  dense_11.csv  dense_4.csv  dimacs_0.csv  dimacs_22.csv  dimacs_29.csv  docking_0.csv  docking_1.csv  docking_2.csv  product_0.csv  product_1.csv  product_2.csv  protein_2.csv  protein_4.csv  protein_5.csv  protein_6.csv  rand_13.csv  rand_20.csv  rand_7.csv
graph/: CMakeLists.txt  graph_mcqd.hpp  mcqd.cpp  mcqd.hpp  vertex.hpp
helper/: CMakeLists.txt  array1d.hpp  array2d.cpp  array2d.hpp  array3d.hpp  benchmark.cpp  benchmark.hpp  debug.hpp  error.hpp  graph.cpp  graph.hpp  gzip.hpp  help.cpp  help.hpp  inout.cpp  inout.hpp  iomanip.cpp  iomanip.hpp  path.cpp  path.hpp  tdefs.hpp  util.cpp  util.hpp
pred/: 1_product_gat.csv  1_product_gcn.csv  1_product_gin.csv  2_product_gat.csv  2_product_gcn.csv  2_product_gin.csv  5_product_gat.csv  5_product_gcn.csv  5_product_gin.csv  dense_gat.csv  dense_gbr.csv  dense_gcn.csv  dense_gin.csv  dense_gnn.csv  dense_svr.csv  dense_svr_wl.csv  dense_xgb.csv  dimacs_gat.csv  dimacs_gbr.csv  dimacs_gcn.csv  dimacs_gin.csv  dimacs_gnn.csv  dimacs_svr.csv  dimacs_svr_wl.csv  dimacs_xgb.csv  docking_gat.csv  docking_gbr.csv  docking_gcn.csv  docking_gin.csv  docking_svr.csv  docking_svr_wl.csv  docking_xgb.csv  dockingw_gat.csv  product_gat.csv  product_gbr.csv  product_gcn.csv  product_gin.csv  product_svr.csv  product_svr_wl.csv  product_xgb.csv  (+16 more)
python/: analysis.py  classic_ml.py  gnn_models.py  gnnw.py  kernel_ml.py  main.py  make_predictions.sh  results.ipynb  util.py
(+71 files in other folders)
